--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "ant-design-vue": "^4.2.6",
+    "firebase": "^11.3.0",
     "ol": "^10.3.0",
     "swiper": "^11.1.15",
     "vue": "^3.5.12",
